testing/framework/resources/Advanced/Failing/mondrian/query6222.e
USA	CA	Burlingame	508	Peggy Justice	Peggy Justice	F	M	Graduate Degree	$30K - $50K
USA	CA	Novato	2274	Karen Koman	Karen Koman	F	S	Bachelors Degree	$50K - $70K
